--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,75 @@
+#renkler {
+  background-color: rgb(61, 83, 40, 0.13);
+  position: fixed;
+  left: 1340px;
+  top: 100px;
+  width: 154px;
+  height: 656px;
+  display: flex;
+  flex-flow: column;
+}
+
+.sıra {
+  margin-top: 50px;
+  margin-left: 45px;
+}
+
+.d1 {
+  background-color: #5e5e5e;
+  border-radius: 100px;
+  width: 64px;
+  height: 64px;
+  margin-bottom: 20px;
+}
+
+.d2 {
+  background-color: #b6795f;
+  border-radius: 100px;
+  width: 64px;
+  height: 64px;
+  margin-bottom: 20px;
+}
+
+.d3 {
+  background-color: #f2f2f2;
+  border-radius: 100px;
+  width: 64px;
+  height: 64px;
+  margin-bottom: 20px;
+}
+
+.d4 {
+  background-color: #e0e0e0;
+  border-radius: 100px;
+  width: 64px;
+  height: 64px;
+  margin-bottom: 20px;
+}
+
+.d5 {
+  background-color: #ffffff;
+  border-radius: 100px;
+  width: 64px;
+  height: 64px;
+  margin-bottom: 20px;
+}
+
+.d6 {
+  background-color: #c4c4c4;
+  border-radius: 100px;
+  width: 64px;
+  height: 64px;
+  margin-bottom: 20px;
+}
+
+.d7 {
+  background-color: #e6e6e6;
+  border-radius: 100px;
+  width: 64px;
+  height: 64px;
+  margin-bottom: 20px;
+}
+
 body {
   margin: 0px;
   padding: 0px;
@@ -33,8 +105,6 @@ a {
 
 .c1 {
   margin: 13px 121px 0px 742px;
-  width: 90px;
-  height: 50px;
 }
 
 summary {
@@ -46,16 +116,27 @@ summary {
   display: block;
 }
 details summary:before {
-  content: " + ";
+  content: " ↑ ";
 }
 details[open] summary:before {
-  content: " - ";
+  content: " ↓ ";
 }
 
 #nav {
   display: flex;
   flex-direction: row;
   background-color: #ffffff;
+}
+
+.follow {
+  width: 27px;
+  height: 21px;
+  margin-right: 15px;
+}
+
+.isim {
+  width: 311px;
+  height: 73px;
 }
 
 .logo {
@@ -65,7 +146,6 @@ details[open] summary:before {
 }
 
 #menu {
-  color: #b6795f;
   font-size: 14px;
   font-family: "Lato", sans-serif;
   margin-top: 58px;
@@ -75,6 +155,8 @@ details[open] summary:before {
 .amenu {
   margin-right: 60px;
   cursor: no-drop;
+  color: #b6795f;
+  font-weight: bold;
 }
 
 .our {
@@ -93,4 +175,113 @@ details[open] summary:before {
   justify-content: center;
   margin-top: 25.02px;
   font-family: "Lato", sans-serif;
+}
+
+.anakutu {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 36.54px;
+  margin-left: 135px;
+  width: 1350px;
+}
+
+.kutu {
+  width: 270px;
+  height: 270px;
+  background-color: #e6e6e6;
+  margin-right: 30px;
+}
+
+.adi {
+  color: #5e5e5e;
+  font-size: 14px;
+  margin-top: 30px;
+  margin-left: 106px;
+  width: 45px;
+  height: 17px;
+}
+
+.fiyat {
+  color: #b6795f;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+  margin-top: 12px;
+  margin-left: 106px;
+  margin-bottom: 60px;
+  width: 50px;
+  height: 22px;
+}
+/* 
+.ribbon {
+  width: 100.41px;
+  height: 50.97px;
+  overflow: hidden;
+  background: #f5bfa8;
+  transform: rotate(44.93deg);
+}
+
+.s1 {
+  position: absolute;
+  width: 110px;
+  height: 40px;
+  left: 640px;
+  top: 330px;
+  font-family: "Lato", sans-serif;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 10px;
+  text-align: center;
+  color: #ffffff;
+  padding-top: 20px;
+} */
+
+.s1 {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 100px 100px 0;
+  border-color: transparent #f5bfa8 transparent transparent;
+  margin-left: 170px;
+  position: relative;
+}
+
+span {
+  position: absolute;
+  transform: rotate(44.93deg);
+  color: #ffffff;
+  font-family: "Lato", sans-serif;
+  font-weight: bold;
+  font-size: 12px;
+  text-align: center;
+  margin-left: 40px;
+  margin-top: 17px;
+}
+
+#kut {
+  width: 270px;
+  height: 270px;
+  background-color: #e6e6e6;
+  margin-right: 30px;
+}
+
+.akut {
+  line-height: 50px;
+  overflow: hidden;
+  height: 0px;
+}
+
+#kut:hover .akut {
+  height: 65px;
+}
+
+.text {
+  text-align: center;
+  color: #5e5e5e;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 15px;
+  font-size: 18px;
+}
+#kut:hover .text {
+  background: #ffffff;
 }
