--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ body {
   margin-top: 17px;
   display: flex;
   flex-direction: row;
+  cursor: no-drop;
 }
 
 a {
@@ -98,17 +99,40 @@ a {
 }
 
 .b1 {
-  padding-left: 60px;
-  padding-right: 60px;
+  margin-left: 60px;
   list-style-type: none;
+  display: flex;
+  flex-direction: row;
+}
+
+.b2{
+margin-left: 60px;
+}
+
+.cizgi {
+  margin-top: 0%;
+  margin-right: 5px;
+  border-left: 1px solid #e0e0e0;
+  height: 40px;
 }
 
 .c1 {
-  margin: 13px 121px 0px 742px;
+  margin: 13px 10px 0px 742px;
+  width: 25px;
+  height: 5px;
+}
+
+.c2 {
+  margin-top: 13px;
+  margin-left: 10px;
+  width: 25px;
+  height: 5px;
 }
 
 summary {
   list-style: none;
+  cursor: no-drop;
+  max-width: 300px;
 }
 
 details,
@@ -262,6 +286,7 @@ span {
   height: 270px;
   background-color: #e6e6e6;
   margin-right: 30px;
+  cursor: no-drop;
 }
 
 .akut {
@@ -282,6 +307,7 @@ span {
   margin-top: 15px;
   font-size: 18px;
 }
+
 #kut:hover .text {
   background: #ffffff;
 }
